--- a/Integratieproject201516/DAL/DAL.csproj
+++ b/Integratieproject201516/DAL/DAL.csproj
@@ -57,8 +57,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppDbContext.cs" />
-    <Compile Include="Class1.cs" />
+    <Compile Include="BPDbContext.cs" />
+    <Compile Include="BPInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
