--- a/Integratieproject201516/DAL/DAL.csproj
+++ b/Integratieproject201516/DAL/DAL.csproj
@@ -60,6 +60,7 @@
     <Compile Include="BPDbContext.cs" />
     <Compile Include="BPInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserStore.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
